crates/kul-core/tests/snapshots/filter__conjunction_certain_excludes_unknown.snap
---
source: crates/kul-core/tests/filter.rs
expression: "person_ids(&cohort(), &conjunction_query())"
---
[
  "echo"
]
