crates/kul-core/tests/snapshots/filter__conjunction_include_uncertain_keeps_unknown.snap
---
source: crates/kul-core/tests/filter.rs
expression: "person_ids(&cohort(), &conjunction_query().including_uncertain())"
---
[
  "delta",
  "bravo",
  "echo",
  "foxtrot"
]
