crates/kul-core/tests/snapshots/filter__membership_family_set.snap
---
source: crates/kul-core/tests/filter.rs
expression: "person_ids(&cohort(), &query)"
---
[
  "delta",
  "bravo",
  "echo"
]
