crates/kul-core/tests/snapshots/filter__membership_gender_including_other.snap
---
source: crates/kul-core/tests/filter.rs
expression: "person_ids(&cohort(), &query)"
---
[
  "delta",
  "alpha",
  "echo",
  "golf"
]
