crates/kul-core/tests/snapshots/filter__present_family_two_valued.snap
---
source: crates/kul-core/tests/filter.rs
expression: "person_ids(&cohort(), &query)"
---
[
  "delta",
  "bravo",
  "alpha",
  "charlie",
  "echo",
  "golf"
]
