crates/kul-core/tests/snapshots/filter__sort_born_asc_missing_last_date_bounds.snap
---
source: crates/kul-core/tests/filter.rs
expression: "sorted_ids(&cohort(), PersonField::Born, SortDirection::Asc)"
---
[
  "charlie",
  "bravo",
  "alpha",
  "delta",
  "echo",
  "foxtrot",
  "golf"
]
