crates/kul-core/tests/snapshots/filter__sort_born_desc_missing_still_last.snap
---
source: crates/kul-core/tests/filter.rs
expression: "sorted_ids(&cohort(), PersonField::Born, SortDirection::Desc)"
---
[
  "foxtrot",
  "echo",
  "delta",
  "alpha",
  "bravo",
  "charlie",
  "golf"
]
