crates/kul-core/tests/snapshots/filter__sort_family_asc_missing_last_id_tiebreak.snap
---
source: crates/kul-core/tests/filter.rs
expression: "sorted_ids(&cohort(), PersonField::Family, SortDirection::Asc)"
---
[
  "bravo",
  "delta",
  "echo",
  "alpha",
  "charlie",
  "golf",
  "foxtrot"
]
