crates/kul-core/tests/snapshots/filter__sort_family_desc_missing_last_id_tiebreak_still_ascending.snap
---
source: crates/kul-core/tests/filter.rs
expression: "sorted_ids(&cohort(), PersonField::Family, SortDirection::Desc)"
---
[
  "alpha",
  "charlie",
  "golf",
  "bravo",
  "delta",
  "echo",
  "foxtrot"
]
